--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Blog</title>
+    <!-- 代码高亮 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Naccl/blog-resource/prism/tomorrow-night/prism.min.css">
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="app">
+      <!-- Markdown编辑器插件 -->
+      <mavon-editor v-model="value"/>
+    </div>
+    <!-- markdown目录 -->
+    <script src="https://cdn.jsdelivr.net/npm/tocbot@4.6.0/dist/tocbot.min.js"></script>
+    <!-- 目录代码高亮 -->
+    <script src="https://cdn.jsdelivr.net/gh/Naccl/blog-resource/prism/tomorrow-night/prism.min.js" data-manual></script>
   </body>
 </html>
