--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Naccl/blog-resource/prism/tomorrow-night/prism.min.css">
   </head>
   <body>
-    <div id="app">
-      <!-- Markdown编辑器插件 -->
-      <mavon-editor v-model="value"/>
-    </div>
+    <div id="app"></div>
     <!-- markdown目录 -->
     <script src="https://cdn.jsdelivr.net/npm/tocbot@4.6.0/dist/tocbot.min.js"></script>
     <!-- 目录代码高亮 -->
